--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.html">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>
+                Welcome To
+            </h1>
+            <h1>
+                <span class="orange-color">Paramoy</span> Happy World
+            </h1>
+            <h2>Building a websites is Running don't be frusted</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum assumenda quo neque repellendus eius
+                aliquam? In sit non est quae ullam atque sed, ut provident corporis cumque earum illum aspernatur. Lorem
+                ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quidem eum at aperiam, beatae ut
+                mollitia placeat. Distinctio ad quam dolor tenetur hic velit corporis, nihil similique atque numquam.
+            </p>
+            <a class="link-button" target="_blank" href="eshak">HIRE ME</a>
+        </div>
+
+        <div class="half-width">
+            <img src="developer-portfolio-master\images\eshak.png" alt="MY Photo">
+        </div>
+
+    </section>
 </body>
+
 </html>
