--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <section class="top-banner">
+
         <div class="half-width">
             <h1>
                 Welcome To
@@ -28,11 +29,37 @@
                 ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quidem eum at aperiam, beatae ut
                 mollitia placeat. Distinctio ad quam dolor tenetur hic velit corporis, nihil similique atque numquam.
             </p>
+            <br>
             <a class="link-button" target="_blank" href="eshak">HIRE ME</a>
         </div>
 
         <div class="half-width">
             <img src="developer-portfolio-master\images\eshak.png" alt="MY Photo">
+        </div>
+
+    </section>
+
+    <section class="dream-big">
+
+        <div class="half-width">
+
+            <img src="developer-portfolio-master\images\jhankar2.png" alt="JhankarPhoto">
+
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become A Web Developper</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti nisi tempore voluptas cupiditate,
+                quam animi, assumenda odio ipsam provident suscipit similique ducimus expedita rem facilis nemo
+                consectetur nostrum, obcaecati quidem.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, nemo sint quasi earum molestias
+                pariatur similique? Perspiciatis, corporis deserunt est beatae exercitationem, voluptates neque quo
+                reiciendis aliquid, enim dolorum recusandae?
+            </p>
+            <a class="link-button" target="_blank" href="eshak"> DOWNLOAD RESUME</a>
+
         </div>
 
     </section>
