Developer Experince Added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
-        <div class="half-width">
+        <div class=" half-width">
             <h1>
                 Welcome To
             </h1>
@@ -39,7 +39,7 @@
 
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
 
         <div class="half-width">
 
@@ -63,6 +63,47 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>
+            Experiences
+        </h1>
+        <div class="flexible-container">
+
+            <div id="Full-Stack-Web-Developper" class="experience-item">
+                <h2>
+                    Full Stack Web Developper
+                </h2>
+                <h3 class="orange-color">
+                    2021-Present | Pro Level Developer
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum dolorum odio id dolores
+                    voluptatem maiores commodi repudiandae suscipit facere mollitia nisi, ut beatae nostrum sit dicta
+                    quis assumenda cum.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusamus in unde nisi, eveniet
+                    voluptatum cupiditate illum dolorem, nobis cum necessitatibus ipsa delectus nihil libero labore quos
+                    omnis inventore porro.
+                </p>
+            </div>
+            <div id="Baby-Web-Developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2021-Present|Programming Hero Learner</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, ad veritatis expedita ea magnam
+                    cum repudiandae. Aspernatur, et voluptates, tenetur sint architecto, officiis necessitatibus natus
+                    adipisci iure provident porro corrupti!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nulla id reiciendis similique totam
+                    at maxime eligendi sequi ab repudiandae repellendus velit ad iusto saepe, deleniti modi earum
+                    blanditiis ducimus!
+                </p>
+
+            </div>
+
+        </div>
+    </section>
 </body>
+<footer>
+    <p> All Credits Goes to Mr. Eshak Hossain.</p>
+</footer>
 
 </html>
